kubernetes-cluster/manifests/apps/nocodb/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nocodb
  namespace: tools
spec:
  selector:
    matchLabels:
      app: nocodb
  template:
    metadata:
      labels:
        app: nocodb
    spec:
      containers:
      - name: nocodb
        image: nocodb/nocodb:latest
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - mountPath: '/usr/app/data'
          name: storage-volume
          subPath: nocodb/data
      volumes:
      - name: storage-volume
        persistentVolumeClaim:
          claimName: tools-pvc
