kubernetes-cluster/manifests/apps/nocodb/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nocodb
  namespace: tools
spec:
  selector:
    app: nocodb
  ports:
  - name: nocodb
    port: 80
    targetPort: 8080
